adicionando imagens e style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <div id="page">
-    <img src="./assets/main-image.png" alt="">
+    <img src="./assets/main-image.png" alt="imagem de Cupcakes com grãos de café e chantilly">
 
     <main>
         <section id="about">
