--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         
     </main>
 </div>
- 
+
+<footer>Feito com <img src="./assets/heart.svg.svg" alt="coração"> pela Rocketseat</footer>
 </body>
 </html>
